NoSql Types and Characteristics 1st Draft

--- a/references.bib
+++ b/references.bib
@@ -249,6 +249,27 @@
   Timestamp                = {2015.10.11}
 }
 
+@Article{Cattell:2011:SSN:1978915.1978919,
+  Title                    = {Scalable SQL and NoSQL Data Stores},
+  Author                   = {Cattell, Rick},
+  Journal                  = {SIGMOD Rec.},
+  Year                     = {2011},
+
+  Month                    = may,
+  Number                   = {4},
+  Pages                    = {12--27},
+  Volume                   = {39},
+
+  Acmid                    = {1978919},
+  Address                  = {New York, NY, USA},
+  Doi                      = {10.1145/1978915.1978919},
+  ISSN                     = {0163-5808},
+  Issue_date               = {December 2010},
+  Numpages                 = {16},
+  Publisher                = {ACM},
+  Url                      = {http://doi.acm.org/10.1145/1978915.1978919}
+}
+
 @Article{Briscoe2009,
   Title                    = {Digital Ecosystems in the Clouds: Towards Community Cloud Computing},
   Author                   = {Gerard Briscoe and
@@ -308,6 +329,28 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.08}
+}
+
+@Article{Codd:1970:RMD:362384.362685,
+  Title                    = {A Relational Model of Data for Large Shared Data Banks},
+  Author                   = {Codd, E. F.},
+  Journal                  = {Commun. ACM},
+  Year                     = {1970},
+
+  Month                    = jun,
+  Number                   = {6},
+  Pages                    = {377--387},
+  Volume                   = {13},
+
+  Acmid                    = {362685},
+  Address                  = {New York, NY, USA},
+  Doi                      = {10.1145/362384.362685},
+  ISSN                     = {0001-0782},
+  Issue_date               = {June 1970},
+  Keywords                 = {composition, consistency, data bank, data base, data integrity, data organization, data structure, derivability, hierarchies of data, join, networks of data, predicate calculus, redundancy, relations, retrieval language, security},
+  Numpages                 = {11},
+  Publisher                = {ACM},
+  Url                      = {http://doi.acm.org/10.1145/362384.362685}
 }
 
 @Book{collinsAndroid,
@@ -508,6 +551,18 @@
   Bdsk-url-1               = {http://www.ekea.gr/donor-questionaire/},
   Owner                    = {ilias},
   Timestamp                = {2015.09.29}
+}
+
+@Electronic{numberOfNoSQL,
+  Title                    = {List of NoSQL Databases},
+  Author                   = {Edlich},
+  HowPublished             = {http://nosql-database.org/},
+  Language                 = {English},
+  Url                      = {http://nosql-database.org/},
+  Year                     = {2015},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.13}
 }
 
 @Electronic{epsos,
@@ -726,6 +781,18 @@ Timothy Grance},
 
   Doi                      = {10.1109/HICSS.2014.377},
   Keywords                 = {behavioural sciences;game theory;dependent variables;empirical studies;gamification work;gamified systems;independent variables;literature review;psychological-behavioral outcomes;Context;Databases;Educational institutions;Games;Libraries;Psychology;HCI;gamification;motivation;motivational affordance;persuasive technology}
+}
+
+@InProceedings{6106531,
+  Title                    = {Survey on NoSQL database},
+  Author                   = {Jing Han and Haihong, E. and Guan Le and Jian Du},
+  Booktitle                = {Pervasive Computing and Applications (ICPCA), 2011 6th International Conference on},
+  Year                     = {2011},
+  Month                    = {Oct},
+  Pages                    = {363-366},
+
+  Doi                      = {10.1109/ICPCA.2011.6106531},
+  Keywords                 = {SQL;cloud computing;query processing;relational databases;CAP theorem;Internet;NoSQL database;SNS;cloud computing;data model;high-concurrency applications;query dynamic user data;relational database;search engines;Blogs;Computational modeling;Databases;Facebook;Reliability;Big Data;NoSQL;column-oriented;database;document;key-value}
 }
 
 @Electronic{hematologyBasics,
@@ -1249,6 +1316,39 @@ URN: urn:nbn:de:0114-fqs0501297},
   Timestamp                = {2015.10.04}
 }
 
+@InProceedings{5993686,
+  Title                    = {A comparison between several NoSQL databases with comments and notes},
+  Author                   = {Tudorica, B.G. and Bucur, C.},
+  Booktitle                = {Roedunet International Conference (RoEduNet), 2011 10th},
+  Year                     = {2011},
+  Month                    = {June},
+  Pages                    = {1-5},
+
+  Doi                      = {10.1109/RoEduNet.2011.5993686},
+  ISSN                     = {2068-1038},
+  Keywords                 = {SQL;ACID;BASE;NoSQL databases;atomic consistent isolated durable database trait;basic availability soft state eventual consistency feature;not only structured query language systems;Availability;Benchmark testing;Distributed databases;Generators;Google;Taxonomy;NoSQL;comparison;database;performance}
+}
+
+@InProceedings{Vicknair:2010:CGD:1900008.1900067,
+  Title                    = {A Comparison of a Graph Database and a Relational Database: A Data Provenance Perspective},
+  Author                   = {Vicknair, Chad and Macias, Michael and Zhao, Zhendong and Nan, Xiaofei and Chen, Yixin and Wilkins, Dawn},
+  Booktitle                = {Proceedings of the 48th Annual Southeast Regional Conference},
+  Year                     = {2010},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {42:1--42:6},
+  Publisher                = {ACM},
+  Series                   = {ACM SE '10},
+
+  Acmid                    = {1900067},
+  Articleno                = {42},
+  Doi                      = {10.1145/1900008.1900067},
+  ISBN                     = {978-1-4503-0064-3},
+  Location                 = {Oxford, Mississippi},
+  Numpages                 = {6},
+  Url                      = {http://doi.acm.org/10.1145/1900008.1900067}
+}
+
 @InProceedings{6249994,
   Title                    = {Improving the interoperability of healthcare information systems through HL7 CDA and CCD standards},
   Author                   = {Vida, M. and Lupse, O. and Stoicu-Tivadar, L.},
@@ -1456,3 +1556,144 @@ URN: urn:nbn:de:0114-fqs0501297},
   Timestamp                = {2015.10.12}
 }
 
+@article{DeCandia:2007:DAH:1323293.1294281,
+ author = {DeCandia, Giuseppe and Hastorun, Deniz and Jampani, Madan and Kakulapati, Gunavardhan and Lakshman, Avinash and Pilchin, Alex and Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
+ title = {Dynamo: Amazon's Highly Available Key-value Store},
+ journal = {SIGOPS Oper. Syst. Rev.},
+ issue_date = {December 2007},
+ volume = {41},
+ number = {6},
+ month = oct,
+ year = {2007},
+ issn = {0163-5980},
+ pages = {205--220},
+ numpages = {16},
+ url = {http://doi.acm.org/10.1145/1323293.1294281},
+ doi = {10.1145/1323293.1294281},
+ acmid = {1294281},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {performance, reliability, scalability},
+}
+
+@article{seeger2009key,
+  title={Key-Value stores: a practical overview},
+  author={Seeger, Marc and Ultra-Large-Sites, S},
+  journal={Computer Science and Media, Stuttgart},
+  year={2009}
+}
+
+@inproceedings{abadi2006integrating,
+  title={Integrating compression and execution in column-oriented database systems},
+  author={Abadi, Daniel and Madden, Samuel and Ferreira, Miguel},
+  booktitle={Proceedings of the 2006 ACM SIGMOD international conference on Management of data},
+  pages={671--682},
+  year={2006},
+  organization={ACM}
+}
+
+@article{abadi2009column,
+  title={Column-oriented database systems},
+  author={Abadi, Daniel J and Boncz, Peter A and Harizopoulos, Stavros},
+  journal={Proceedings of the VLDB Endowment},
+  volume={2},
+  number={2},
+  pages={1664--1665},
+  year={2009},
+  publisher={VLDB Endowment}
+}
+
+@book{banker2011mongodb,
+  title={MongoDB in action},
+  author={Banker, Kyle},
+  year={2011},
+  publisher={Manning Publications Co.}
+}
+
+@book{redmond2012seven,
+  title={Seven databases in seven weeks: a guide to modern databases and the NoSQL movement},
+  author={Redmond, Eric and Wilson, Jim R},
+  year={2012},
+  publisher={Pragmatic Bookshelf}
+}
+
+@inproceedings{he2008graphs,
+  title={Graphs-at-a-time: query language and access methods for graph databases},
+  author={He, Huahai and Singh, Ambuj K},
+  booktitle={Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
+  pages={405--418},
+  year={2008},
+  organization={ACM}
+}
+
+@book{robinson2013graph,
+  title={Graph databases},
+  author={Robinson, Ian and Webber, Jim and Eifrem, Emil},
+  year={2013},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+@book{kim1990introduction,
+  title={Introduction to object-oriented databases},
+  author={Kim, Won},
+  volume={90},
+  year={1990},
+  publisher={MIT press Cambridge, MA}
+}
+
+@incollection{bertino1997object,
+  title={Object-oriented databases},
+  author={Bertino, Elisa and Ooi, Beng Chin and Sacks-Davis, Ron and Tan, Kian-Lee and Zobel, Justin and Shidlovsky, Boris and Catania, Barbara},
+  booktitle={Indexing Techniques for Advanced Database Systems},
+  pages={1--38},
+  year={1997},
+  publisher={Springer}
+}
+
+@inproceedings{kim2014object,
+  title={The Object-Oriented Database System},
+  author={Kim, W and Nicolas, JM and Nishio, S},
+  booktitle={Deductive and Object-Oriented Databases: Proceedings of the First International Conference on Deductive and Object-Oriented Databases (DOOD89) Kyoto Research Park, Kyoto, Japan, 4-6 December 1989},
+  pages={223},
+  year={2014},
+  organization={Elsevier}
+}
+
+@article{leavitt2000whatever,
+  title={Whatever happened to object-oriented databases?},
+  author={Leavitt, Neal},
+  journal={Computer},
+  number={8},
+  pages={16--19},
+  year={2000},
+  publisher={IEEE}
+}
+
+@article{schindler2012characteristics,
+  title={I/O characteristics of NoSQL databases},
+  author={Schindler, Jiri},
+  journal={Proceedings of the VLDB Endowment},
+  volume={5},
+  number={12},
+  pages={2020--2021},
+  year={2012},
+  publisher={VLDB Endowment}
+}
+
+@article{stonebraker2010sql,
+  title={SQL databases v. NoSQL databases},
+  author={Stonebraker, Michael},
+  journal={Communications of the ACM},
+  volume={53},
+  number={4},
+  pages={10--11},
+  year={2010},
+  publisher={ACM}
+}
+
+@article{grazioli2014mapping,
+  title={Mapping relational databases into a distributed NoSQL},
+  author={GRAZIOLI, FRANCESCO},
+  year={2014},
+  publisher={Italy}
+}
